Corrected  rendering issue on Firefox PC

--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ footer a:hover {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   z-index: 1003; /* Higher than the loading indicator */
